--- a/src/main/resources/assets/growores/lang/en_us.json
+++ b/src/main/resources/assets/growores/lang/en_us.json
@@ -115,5 +115,6 @@
   "block.growores.silver_reed": "Silver Reeds",
   "block.growores.deepslate_silver_reed": "Deepslate Silver Reeds",
 
+  "creativetab.growores_tab": "Growable Ores",
   "itemGroup.growores_tab": "Growable Ores"
 }
